cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("ring-${base}" "${source}")
    set_property(TARGET "ring-${base}" PROPERTY CXX_STANDARD 20)
    target_link_libraries("ring-${base}" "ring")
    add_test("ring-${base}" "ring-${base}")
endforeach()
